# art_activity_collections

./: .env.example  .env.railway.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LOCAL_CRAWLER_SETUP.md  RAILWAY_CONFIG.md  README.md  VERCEL_FRONTEND_SETUP.md  ZAPIER_ALERT_SETUP.md  event_url_test.md  pyproject.toml
config/: crawler_venues.toml
db/: schema.sql  schema_latest.sql
frontend/: README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
mobile/: App.tsx  LICENSE  app.json  package-lock.json  package.json
scripts/: backfill_venue_geocodes.py  bootstrap.sh  build_static_venue_media.py  build_venue_presentation_assets.py  check_db_connection.py  check_duplicate_venues.py  dedupe_venues.py  export_latest_event_urls.py  run_academy_art_museum_parser.py  run_akron_art_museum_parser.py  run_al_bundle_parser.py  run_alaska_state_museum_parser.py  run_albrecht_kemper_parser.py  run_aldrich_parser.py  run_alexandria_museum_of_art_parser.py  run_allen_memorial_art_museum_parser.py  run_amon_carter_parser.py  run_anchorage_museum_parser.py  run_ar_custom_calendar_bundle_parser.py  run_ar_tribe_bundle_parser.py  run_az_html_bundle_parser.py  run_az_tribe_bundle_parser.py  run_bampfa_parser.py  run_bemis_parser.py  run_benton_parser.py  run_blanden_parser.py  run_blanton_parser.py  run_bma_parser.py  run_bmoa_parser.py  run_bradbury_art_museum_parser.py  run_bruce_parser.py  run_buffalo_akg_parser.py  run_butler_institute_of_american_art_parser.py  run_byu_moa_parser.py  run_canton_museum_of_art_parser.py  run_ccmoa_parser.py  (+140 more)
(+343 files in other folders)
